# lab8

./: .gitignore  GIT_CMD_CHEATSHEET.md  LICENSE  README.md  UV_package_manger.md
DVC_DEMO/: pyproject.toml
mlflow_101/: ataglance.ipynb  pyproject.toml
mlflow_101/DL_MLFlow_Project/: starter.ipynb
mlflow_101/ML_Project_001/: gettingstarted.ipynb  houseprice_predictor.ipynb
mlflow_101/ML_Project_001/mlruns/0/: meta.yaml
mlflow_101/ML_Project_001/mlruns/415959282414054623/: meta.yaml
mlflow_101/ML_Project_001/mlruns/415959282414054623/7413abd363284cd8b121de75dff18492/: meta.yaml
mlflow_101/ML_Project_001/mlruns/415959282414054623/7f286abcf8214a77bff767b7c745e985/: meta.yaml
mlflow_101/ML_Project_001/mlruns/models/tracking-quickstart/: meta.yaml
mlflow_101/mlruns/0/: meta.yaml
mlflow_101/mlruns/0/292ec668d2c54e25b790df57babc3229/: meta.yaml
mlflow_101/mlruns/0/292ec668d2c54e25b790df57babc3229/metrics/: AtttemptNikhil1  AtttemptNikhil2
mlflow_101/mlruns/0/872f955ee05344f8b7ac1524ad7f3a99/: meta.yaml
mlflow_101/mlruns/0/872f955ee05344f8b7ac1524ad7f3a99/metrics/: Attempt 1  Attempt 2
mlflow_101/mlruns/0/872f955ee05344f8b7ac1524ad7f3a99/tags/: mlflow.runName
mlflow_101/mlruns/0/bd923375e56e41d3bdb9331c38aef904/: meta.yaml
mlflow_101/mlruns/0/bd923375e56e41d3bdb9331c38aef904/metrics/: Atttempt1  Atttempt2
mlflow_101/mlruns/0/bd923375e56e41d3bdb9331c38aef904/tags/: mlflow.runName  mlflow.source.name
mlflow_101/mlruns/135730647942244937/: meta.yaml
mlflow_101/mlruns/135730647942244937/8d78d54626fc46fc9fa54c754b1fe1ca/: meta.yaml
(+29 files in other folders)
