[tool.poetry]
name = "mlflow-101"
version = "0.1.0"
description = "MLFlow Freshers"
authors = ["Wiznikvibe <nikhilshetty439@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.22.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
hyperopt = "^0.2.7"
keras = "^3.10.0"
tensorflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
